--- a/services.html
+++ b/services.html
@@ -177,12 +177,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 w3l_footer_grid">
 				<h3>Address</h3>
 				<ul class="w3_address">
-					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Sultanpur, <span>Utter Pradesh.</span></li>
+					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:iamlearning@gmail.com">iamlearning@gmail.com</a></li>
+					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+91 8115725064</li>
 				</ul>
 			</div>
-			<div class="col-md-2 w3l_footer_grid">
+			<!--<div class="col-md-2 w3l_footer_grid">
 				<h3>Navigation</h3>
 				<ul class="agileinfo_footer_grid_nav">
 					<li><a href="services.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>Services</a></li>
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					<li><a href="mail.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>Mail Us</a></li>
 				</ul>
-			</div>
+			</div> -->
 			<div class="col-md-3 w3l_footer_grid">
 				<h3>Social Media</h3>
 				<ul class="agileinfo_social_icons1 agileinfo_social">
