--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 								eu aliquet massa. Suspendisse lacinia rutrum tincidunt. Integer id erat porta, 
 								convallis tortor a, ullamcorper magna.</p>
 							<div class="wthree_testimonials_grid_pos">
-								<img src="images/2.png" alt=" " class="img-responsive" />
+								<img src="images/One.png" alt=" " class="img-responsive" />
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
@@ -158,7 +158,7 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 								eu aliquet massa. Suspendisse lacinia rutrum tincidunt. Integer id erat porta, 
 								convallis tortor a, ullamcorper magna.</p>
 							<div class="wthree_testimonials_grid_pos">
-								<img src="images/4.png" alt=" " class="img-responsive" />
+								<img src="images/Three.png" alt=" " class="img-responsive" />
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
@@ -175,7 +175,7 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 								eu aliquet massa. Suspendisse lacinia rutrum tincidunt. Integer id erat porta, 
 								convallis tortor a, ullamcorper magna.</p>
 							<div class="wthree_testimonials_grid_pos">
-								<img src="images/3.png" alt=" " class="img-responsive" />
+								<img src="images/Two.png" alt=" " class="img-responsive" />
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
