--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 								eu aliquet massa. Suspendisse lacinia rutrum tincidunt. Integer id erat porta, 
 								convallis tortor a, ullamcorper magna.</p>
 							<div class="wthree_testimonials_grid_pos">
-								<img src="images/Three.png" alt=" " class="img-responsive" />
+								<img src="images/Three.png" alt=" " class="img-responsive" width="150px" />
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
