New Photo and Script

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
-							<h5>Mark Henry</h5>
-							<p>Teacher</p>
+							<h5>Priya</h5>
+							<p>Student</p>
 						</div>
 					</div>
 				</li>
@@ -162,8 +162,8 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
-							<h5>Linda Carl</h5>
-							<p>Teacher</p>
+							<h5>Ram</h5>
+							<p>Student</p>
 						</div>
 					</div>
 				</li>
@@ -179,7 +179,24 @@ Introduction to Physics I & II is a general physics course that will meet the tw
 							</div>
 						</div>
 						<div class="wthree_testimonials_grid1">
-							<h5>Michael Paul</h5>
+							<h5>Monika</h5>
+							<p>Student</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="wthree_testimonials_grid_main">
+						<div class="wthree_testimonials_grid">
+							<h4>Integer id erat porta convallis tortor</h4>
+							<p>Donec laoreet eu purus eu viverra. Vestibulum sed convallis massa,
+								eu aliquet massa. Suspendisse lacinia rutrum tincidunt. Integer id erat porta, 
+								convallis tortor a, ullamcorper magna.</p>
+							<div class="wthree_testimonials_grid_pos">
+								<img src="images/Four.png" alt=" " class="img-responsive" width="150px"/>
+							</div>
+						</div>
+						<div class="wthree_testimonials_grid1">
+							<h5>Sumit Sir</h5>
 							<p>Teacher</p>
 						</div>
 					</div>
